--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ dmypy.json
 # result of test
 test_movies/*_tethered_cell_result/
 test_movies/*_tethered_cell_result/*
+
+# ImageJ Jython
+*.class
